--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
-    <link rel="stylesheet" href="/styles/style1.css">
-    <link rel="stylesheet" href="/styles/style2.css">
-    <link rel="stylesheet" href="/styles/style3.css">
-    <link rel="stylesheet" href="/styles/style4.css">
-    <link rel="stylesheet" href="/styles/style5.css">
+    <link rel="stylesheet" href="styles/style1.css">
+    <link rel="stylesheet" href="styles/style2.css">
+    <link rel="stylesheet" href="styles/style3.css">
+    <link rel="stylesheet" href="styles/style4.css">
+    <link rel="stylesheet" href="styles/style5.css">
     
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
