--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <button>MORE ABOUT ME</button>
         </div>
         <div class="profile-container">
-            <img src="/images/img1.jpeg" alt="Profile">
+            <img src="images/img1.jpeg" alt="Profile">
 
             <div class="curve"></div>
 
