--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
      <div class="about" id="aboutme">
         <div class="nav">
             <div class="img-container">
-                <img src="/images/img1.jpeg" alt="profile" class="about-img">
+                <img src="images/img1.jpeg" alt="profile" class="about-img">
             </div>
             <div class="nav-container">
                 <ul type="none">
@@ -162,7 +162,7 @@
       <div class="resume" id="resume">
         <div class="nav">
             <div class="img-container">
-                <img src="/images/img1.jpeg" alt="profile" class="about-img">
+                <img src="images/img1.jpeg" alt="profile" class="about-img">
             </div>
             <div class="nav-container">
                 <ul type="none">
@@ -235,7 +235,7 @@
       <div class="portfolio" id="portfolio">
         <div class="nav">
             <div class="img-container">
-                <img src="/images/img1.jpeg" alt="profile" class="about-img">
+                <img src="images/img1.jpeg" alt="profile" class="about-img">
             </div>
             <div class="nav-container">
                 <ul type="none">
@@ -305,7 +305,7 @@
        <div class="contact" id="contact">
         <div class="nav">
             <div class="img-container">
-                <img src="/images/img1.jpeg" alt="profile" class="about-img">
+                <img src="images/img1.jpeg" alt="profile" class="about-img">
             </div>
             <div class="nav-container">
                 <ul type="none">
