Fix relative paths for GitHub Pages

--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
        </div>
        <!-- Toggle Button -->
 <!-- Mobile Toggle Button -->
-<div id="mobile-nav-toggle">+</div>
+<!-- <div id="mobile-nav-toggle">+</div> -->
 
 <script>
     const icons = document.querySelectorAll('.icons i, .vertical-nav i');
