section1 content changed

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </h1>
             <h4 class="role">SOFTWARE DEVELOPER</h4>
             <h4 class="description">Debugging Life… Searching for Job()</h4>
-            <p>Associate Developer with 1+ year experience in MERN stack. Self-taught Django, built practical projects, skilled in Python, front-end, and UI/UX with Figma. Eager to innovate and contribute to impactful solutions.</p>
+            <p>Associate Developer with foundational knowledge in MERN stack and self-learning experience in Django. Skilled in Python and UI/UX design with Figma, with a strong interest in front-end development. Eager to learn and contribute to innovative solutions.</p>
             <button>MORE ABOUT ME</button>
         </div>
         <div class="profile-container">
