--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
             </h1>
             <h4 class="role">SOFTWARE DEVELOPER</h4>
             <h4 class="description">Debugging Life… Searching for Job()</h4>
-            <p>Associate Developer with foundational knowledge in MERN stack and self-learning experience in Django. Skilled in Python and UI/UX design with Figma, with a strong interest in front-end development. Eager to learn and contribute to innovative solutions.</p>
-            <button>MORE ABOUT ME</button>
+            <p style="text-align: justify;">Associate Developer with foundational knowledge in MERN stack and self-learning experience in Django. Skilled in Python and UI/UX design with Figma, with a strong interest in front-end development. Eager to learn and contribute to innovative solutions.</p>
+            <a href="#aboutme"><button>MORE ABOUT ME</button></a>
         </div>
         <div class="profile-container">
             <img src="images/img1.jpeg" alt="Profile">
